--- a/index.html
+++ b/index.html
@@ -4,36 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Single Sticky Card, Multiple Contents</title>
+  <title>Sticky Card with 3D Text Exit/Entry</title>
   <style>
-    /* ensure the scroll‐container is tall enough for two “pages” */
+    /* Make room for 2 "pages" of scroll */
     #scroll-container { height: 200vh; }
-    /* pin the card at mid‐viewport */
+
+    /* Pin the one card at vertical center */
     #sticky-card {
       position: sticky;
       top: 50vh;
       transform: translateY(-50%);
+      perspective: 800px;               /* enable 3D*/
     }
-    /* hide non‐active content */
+
+    /* Hide all content slots by default */
     .card-content { display: none; }
+
+    /* Visible slot */
     .card-content.active { display: block; }
+
+    /* Animate the heading inside each slot */
+    .card-content h2 {
+      transform-origin: center bottom;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+    }
   </style>
 </head>
 <body class="bg-gray-100">
 
   <div id="scroll-container" class="relative">
-    <!-- sticky wrapper -->
     <div id="sticky-card" class="w-full max-w-sm mx-auto">
-      <div id="card" class="bg-white rounded-2xl shadow-xl overflow-hidden">
-        <!-- Content slot #1 -->
+      <div class="bg-white rounded-2xl shadow-xl overflow-hidden">
+
+        <!-- Slot #1 -->
         <div id="content-1" class="card-content p-6">
           <div class="relative h-48 bg-gradient-to-tr from-purple-200 to-pink-200 rounded-t-2xl">
             <h2 class="text-3xl font-bold text-gray-800 absolute top-4 left-4">Team</h2>
-            <div class="absolute top-2 left-2 bg-blue-600 text-white px-2 py-1 rounded-full text-xs">John S.</div>
-            <div class="absolute bottom-2 right-2 bg-red-400 text-white px-2 py-1 rounded-full text-xs">Lilianna</div>
-            <!-- arrows -->
-            <div class="absolute top-12 left-20 w-0 h-0 border-l-6 border-r-6 border-b-6 border-transparent border-b-black rotate-45"></div>
-            <div class="absolute bottom-12 right-20 w-0 h-0 border-l-6 border-r-6 border-t-6 border-transparent border-t-black rotate-45"></div>
+            <!-- ...avatars/arrows as before... -->
           </div>
           <div class="p-4">
             <h3 class="text-lg font-semibold">Collaborate</h3>
@@ -41,24 +48,18 @@
           </div>
         </div>
 
-        <!-- Content slot #2 -->
+        <!-- Slot #2 -->
         <div id="content-2" class="card-content p-6">
           <div class="relative h-48 bg-gradient-to-br from-indigo-200 to-white rounded-t-2xl">
-            <div class="absolute top-2 left-2 bg-blue-500 text-white px-2 py-1 rounded-full text-xs">v1.2</div>
-            <div class="absolute -left-6 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white w-8 h-8 flex items-center justify-center rounded-full shadow-lg">
-              &#x21bb;
-            </div>
-            <div class="absolute bottom-8 left-8 bg-white p-2 rounded-xl shadow-lg w-40 z-10 text-xs">
-              <p><strong>Finn Hayes</strong><br/>Today, 3:18 PM</p>
-              <hr class="my-1"/>
-              <p><strong>Zoe Quinn</strong><br/>Today, 1:59 PM</p>
-            </div>
+            <h2 class="text-3xl font-bold text-gray-800 absolute top-4 left-4">Version History</h2>
+            <!-- ...icon/dropdown as before... -->
           </div>
           <div class="p-4">
-            <h3 class="text-lg font-semibold">Version History</h3>
+            <h3 class="text-lg font-semibold">Track Every Edit</h3>
             <p class="text-gray-500 text-sm">Track every edit effortlessly, and never lose a single change.</p>
           </div>
         </div>
+
       </div>
     </div>
   </div>
@@ -66,29 +67,63 @@
   <script>
     (function() {
       const container = document.getElementById('scroll-container');
-      const contents = [
-        document.getElementById('content-1'),
-        document.getElementById('content-2')
-      ];
-      const total = contents.length;
-      // show the first slot initially
-      contents[0].classList.add('active');
+      const slots = Array.from(document.querySelectorAll('.card-content'));
+      const slotCount = slots.length;
+      const vh = window.innerHeight;
+
+      // initialize
+      slots.forEach((s, i) => s.classList.toggle('active', i === 0));
 
       function onScroll() {
         const scrollY = window.scrollY;
-        const maxScroll = container.offsetHeight - window.innerHeight;
-        // normalized progress [0..1]
-        const progress = Math.min(Math.max(scrollY / maxScroll, 0), 1);
-        // pick slot index
-        const idx = Math.floor(progress * total);
-        contents.forEach((c,i) => {
-          c.classList.toggle('active', i === idx);
+        const maxScroll = container.offsetHeight - vh;
+        const rawProg = Math.min(Math.max(scrollY / maxScroll, 0), 1);
+        // which slot to show
+        const slotIndex = Math.floor(rawProg * slotCount);
+        slots.forEach((slot, i) => slot.classList.toggle('active', i === slotIndex));
+
+        // now do heading 3D animation for the active slot
+        slots.forEach((slot, i) => {
+          const h2 = slot.querySelector('h2');
+          // compute local progress within this slot: 0→1 as you scroll past it
+          const slotStart = (i / slotCount) * maxScroll;
+          const local = Math.min(Math.max((scrollY - slotStart) / vh, 0), 1);
+
+          if (i === slotIndex) {
+            // entry region: local 0→0.2, keep heading flipped up and transparent
+            // visible region: local 0.2→0.8, heading normal
+            // exit region: local 0.8→1, flip heading away
+            let rot = 0, opa = 1;
+
+            if (local < 0.2) {
+              // still entering: flip-down from -90 to 0
+              const t = local / 0.2;
+              rot = -90 + 90 * t;      // -90deg → 0deg
+              opa = t;
+            } else if (local > 0.8) {
+              // exiting: flip-up from 0 to +90
+              const t = (local - 0.8) / 0.2;
+              rot = 0 + 90 * t;        // 0 → +90deg
+              opa = 1 - t;
+            }
+
+            h2.style.transform = `rotateX(${rot}deg)`;
+            h2.style.opacity   = opa;
+          } else {
+            // non-active slots: reset
+            if (h2) {
+              h2.style.transform = '';
+              h2.style.opacity   = '';
+            }
+          }
         });
       }
 
       window.addEventListener('scroll', onScroll);
-      window.addEventListener('resize', onScroll);
-      // also init
+      window.addEventListener('resize', () => {
+        vh = window.innerHeight;
+        onScroll();
+      });
       onScroll();
     })();
   </script>
