--- a/index.html
+++ b/index.html
@@ -4,32 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Smooth Scroll-Driven Card Animation</title>
+  <title>Scroll-Driven Card Animation (All Elements)</title>
   <style>
-    /* Make enough scroll room for 2 cards */
     #scroll-container { height: 200vh; }
-
-    /* Pin the card center-vertically */
     #sticky-card {
       position: sticky;
       top: 50vh;
       transform: translateY(-50%);
       perspective: 600px;
     }
-
-    /* Keep both slots in the DOM but stacked; we'll animate their children */
     .card-content {
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
+      position: absolute; top: 0; left: 0; right: 0; bottom: 0;
     }
-    /* Hide overflow during animation */
-    #card { overflow: hidden; }
-
-    /* Prepare each element for transform & opacity animation */
+    #card { overflow: hidden; height: 350px; }
     .animatable {
-      transition: none;
-      transform-origin: top center;
       will-change: transform, opacity;
+      transition: none;
     }
   </style>
 </head>
@@ -37,7 +27,7 @@
 
   <div id="scroll-container" class="relative">
     <div id="sticky-card" class="w-full max-w-sm mx-auto">
-      <div id="card" class="bg-white rounded-2xl shadow-xl h-[350px] relative">
+      <div id="card" class="bg-white rounded-2xl shadow-xl relative">
 
         <!-- Slot 1 -->
         <div id="slot-1" class="card-content p-6">
@@ -49,8 +39,8 @@
             <div id="a2" class="animatable absolute bottom-12 right-20 w-0 h-0 border-l-6 border-r-6 border-t-6 border-transparent border-t-black rotate-45"></div>
           </div>
           <div class="p-4">
-            <h3 class="text-lg font-semibold">Collaborate</h3>
-            <p class="text-gray-500 text-sm">Enhance teamwork with powerful real-time collaboration features.</p>
+            <h3 id="t1" class="animatable text-lg font-semibold">Collaborate</h3>
+            <p id="p1" class="animatable text-gray-500 text-sm">Enhance teamwork with powerful real-time collaboration features.</p>
           </div>
         </div>
 
@@ -58,9 +48,7 @@
         <div id="slot-2" class="card-content p-6">
           <div class="relative h-48 bg-gradient-to-br from-indigo-200 to-white rounded-t-2xl overflow-hidden">
             <div id="b3" class="animatable absolute top-2 left-2 bg-blue-500 text-white px-2 py-1 rounded-full text-xs">v1.2</div>
-            <div id="a3" class="animatable absolute -left-6 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white w-8 h-8 flex items-center justify-center rounded-full shadow-lg">
-              &#x21bb;
-            </div>
+            <div id="a3" class="animatable absolute -left-6 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white w-8 h-8 flex items-center justify-center rounded-full shadow-lg">&#x21bb;</div>
             <div id="d1" class="animatable absolute bottom-8 left-8 bg-white p-2 rounded-xl shadow-lg w-40 text-xs">
               <p><strong>Finn Hayes</strong><br/>Today, 3:18 PM</p>
               <hr class="my-1"/>
@@ -68,8 +56,8 @@
             </div>
           </div>
           <div class="p-4">
-            <h3 class="text-lg font-semibold">Version History</h3>
-            <p class="text-gray-500 text-sm">Track every edit effortlessly, and never lose a single change.</p>
+            <h3 id="t2" class="animatable text-lg font-semibold">Version History</h3>
+            <p id="p2" class="animatable text-gray-500 text-sm">Track every edit effortlessly, and never lose a single change.</p>
           </div>
         </div>
 
@@ -79,32 +67,27 @@
 
   <script>
     (function() {
-      const container = document.getElementById('scroll-container');
+      const c = document.getElementById('scroll-container');
       const vh = window.innerHeight;
-      const maxScroll = () => container.offsetHeight - vh;
-      // All animatable elements for slot 1 and slot 2:
-      const slot1Els = ['h1','b1','b2','a1','a2'].map(id=>document.getElementById(id));
-      const slot2Els = ['b3','a3','d1'].map(id=>document.getElementById(id));
+      const max = () => c.offsetHeight - vh;
+
+      // include all slot1 elements, now including title and paragraph
+      const slot1Els = ['h1','b1','b2','a1','a2','t1','p1'].map(id => document.getElementById(id));
+      const slot2Els = ['b3','a3','d1','t2','p2'].map(id => document.getElementById(id));
 
       function update() {
-        const scrollY = window.scrollY;
-        const prog = Math.min(Math.max(scrollY / maxScroll(), 0), 1);
+        const prog = Math.min(Math.max(window.scrollY / max(),0),1);
+        const half = 0.5;
+        const p1 = Math.min(Math.max((prog - 0)/half,0),1);
+        const p2 = Math.min(Math.max((prog - half)/half,0),1);
 
-        // Determine local progress for each slot (0→1 over half the scroll range)
-        const half = 1 / 2;
-        const p1 = Math.min(Math.max((prog - 0) / half, 0), 1);
-        const p2 = Math.min(Math.max((prog - half) / half, 0), 1);
-
-        // Slot 1: fly UP & fade out as p1 goes 0→1
+        // Slot 1 flies up & fades out
         slot1Els.forEach(el => {
-          // translateY from 0px → -100px, opacity 1→0
           el.style.transform = `translateY(${ -100 * p1 }px)`;
           el.style.opacity   = `${1 - p1}`;
         });
-
-        // Slot 2: fly DOWN & fade in as p2 goes 0→1 (invert so 1→0 means hidden before)
+        // Slot 2 flies in & fades up
         slot2Els.forEach(el => {
-          // start off at -100px above, end at 0
           el.style.transform = `translateY(${ -100 * (1 - p2) }px)`;
           el.style.opacity   = `${p2}`;
         });
