--- a/index.html
+++ b/index.html
@@ -24,17 +24,14 @@
   </style>
 </head>
 <body class="bg-gray-100">
-
-  <div id="scroll-container" class="relative">
-    <div id="sticky-card" class="w-full max-w-sm mx-auto">
-      <div id="card" class="bg-white rounded-2xl shadow-xl relative">
-
-        <!-- Slot 1 -->
-        <div id="slot-1" class="card-content p-6">
-          <div class="relative h-48 bg-gradient-to-tr from-purple-200 to-pink-200 rounded-t-2xl overflow-hidden">
-            <div class="relative w-full h-48 rounded-t-2xl overflow-hidden bg-[url('lbox.png')] bg-cover bg-center">
-  …slot content…
-            </div>
+<div id="scroll-container" class="relative">
+<div id="sticky-card" class="w-full max-w-sm mx-auto">
+<div id="card" class="bg-white rounded-2xl shadow-xl relative">
+<!-- Slot 1 -->
+<div id="slot-1" class="card-content p-6">
+<div class="relative w-full h-48 rounded-t-2xl overflow-hidden bg-[url('lbox.png')] bg-cover bg-center">
+slot content
+</div>
             <h2 id="h1" class="animatable text-3xl font-bold text-gray-800 absolute top-4 left-4">Team</h2>
             <div id="b1" class="animatable absolute top-2 left-2 bg-blue-600 text-white px-2 py-1 rounded-full text-xs">John S.</div>
             <div id="b2" class="animatable absolute bottom-2 right-2 bg-red-400 text-white px-2 py-1 rounded-full text-xs">Lilianna</div>
