--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Scroll-Driven Card Animation (All Elements)</title>
+  <title>Scroll-Driven Card Animation (With lbox.png)</title>
   <style>
+    /* scroll space for 2 cards */
     #scroll-container { height: 200vh; }
+    /* pin the card at vertical center */
     #sticky-card {
       position: sticky;
       top: 50vh;
       transform: translateY(-50%);
       perspective: 600px;
     }
+    /* stack both content slots */
     .card-content {
-      position: absolute; top: 0; left: 0; right: 0; bottom: 0;
+      position: absolute;
+      inset: 0;
     }
-    #card { overflow: hidden; height: 350px; }
+    /* card shape */
+    #card {
+      overflow: hidden;
+      height: 350px;
+    }
+    /* elements we animate */
     .animatable {
       will-change: transform, opacity;
       transition: none;
@@ -24,14 +33,20 @@
   </style>
 </head>
 <body class="bg-gray-100">
-<div id="scroll-container" class="relative">
-<div id="sticky-card" class="w-full max-w-sm mx-auto">
-<div id="card" class="bg-white rounded-2xl shadow-xl relative">
-<!-- Slot 1 -->
-<div id="slot-1" class="card-content p-6">
-<div class="relative w-full h-48 rounded-t-2xl overflow-hidden bg-[url('lbox.png')] bg-cover bg-center">
-slot content
-</div>
+
+  <div id="scroll-container" class="relative">
+    <!-- sticky wrapper -->
+    <div id="sticky-card" class="w-full max-w-sm mx-auto">
+      <div id="card" class="bg-white rounded-2xl shadow-xl relative">
+
+        <!-- SLOT 1 -->
+        <div id="slot-1" class="card-content p-6">
+          <!-- YOUR BOX WITH lbox.png -->
+          <div
+            class="relative w-full h-48 rounded-t-2xl overflow-hidden"
+            style="background-image: url('lbox.png'); background-size: cover; background-position: center;"
+          >
+            <!-- slot 1 elements -->
             <h2 id="h1" class="animatable text-3xl font-bold text-gray-800 absolute top-4 left-4">Team</h2>
             <div id="b1" class="animatable absolute top-2 left-2 bg-blue-600 text-white px-2 py-1 rounded-full text-xs">John S.</div>
             <div id="b2" class="animatable absolute bottom-2 right-2 bg-red-400 text-white px-2 py-1 rounded-full text-xs">Lilianna</div>
@@ -44,9 +59,9 @@ slot content
           </div>
         </div>
 
-        <!-- Slot 2 -->
+        <!-- SLOT 2 -->
         <div id="slot-2" class="card-content p-6">
-          <div class="relative h-48 bg-gradient-to-br from-indigo-200 to-white rounded-t-2xl overflow-hidden">
+          <div class="relative w-full h-48 rounded-t-2xl overflow-hidden bg-gradient-to-br from-indigo-200 to-white">
             <div id="b3" class="animatable absolute top-2 left-2 bg-blue-500 text-white px-2 py-1 rounded-full text-xs">v1.2</div>
             <div id="a3" class="animatable absolute -left-6 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white w-8 h-8 flex items-center justify-center rounded-full shadow-lg">&#x21bb;</div>
             <div id="d1" class="animatable absolute bottom-8 left-8 bg-white p-2 rounded-xl shadow-lg w-40 text-xs">
@@ -66,27 +81,30 @@ slot content
   </div>
 
   <script>
-    (function() {
-      const c = document.getElementById('scroll-container');
+    ;(function() {
+      const container = document.getElementById('scroll-container');
       const vh = window.innerHeight;
-      const max = () => c.offsetHeight - vh;
+      const maxScroll = () => container.offsetHeight - vh;
 
-      // include all slot1 elements, now including title and paragraph
+      // Gather all elements to animate
       const slot1Els = ['h1','b1','b2','a1','a2','t1','p1'].map(id => document.getElementById(id));
       const slot2Els = ['b3','a3','d1','t2','p2'].map(id => document.getElementById(id));
 
       function update() {
-        const prog = Math.min(Math.max(window.scrollY / max(),0),1);
+        const prog = Math.min(Math.max(window.scrollY / maxScroll(), 0), 1);
         const half = 0.5;
-        const p1 = Math.min(Math.max((prog - 0)/half,0),1);
-        const p2 = Math.min(Math.max((prog - half)/half,0),1);
+        // progress for slot1: 0→1 over first half
+        const p1 = Math.min(Math.max((prog - 0) / half, 0), 1);
+        // progress for slot2: 0→1 over second half
+        const p2 = Math.min(Math.max((prog - half) / half, 0), 1);
 
-        // Slot 1 flies up & fades out
+        // Slot1: fly up & fade out
         slot1Els.forEach(el => {
           el.style.transform = `translateY(${ -100 * p1 }px)`;
           el.style.opacity   = `${1 - p1}`;
         });
-        // Slot 2 flies in & fades up
+
+        // Slot2: fly in from above & fade in
         slot2Els.forEach(el => {
           el.style.transform = `translateY(${ -100 * (1 - p2) }px)`;
           el.style.opacity   = `${p2}`;
